--- a/src/components/Keyboard/Keyboard.module.css
+++ b/src/components/Keyboard/Keyboard.module.css
@@ -12,6 +12,10 @@
   --white-80: hsla(0, 0%, 100%, 0.8);
 }
 
+ul {
+  padding: 0;
+}
+
 .white,
 .black {
   position: relative;
@@ -25,8 +29,8 @@
 }
 
 .white {
-  height: 12.5rem;
-  width: 3.5rem;
+  height: 170px;
+  width: 40px;
   z-index: 1;
   border-left: 1px solid hsl(0, 0%, 73%);
   border-bottom: 1px solid hsl(0, 0%, 73%);
@@ -35,12 +39,13 @@
     0 0 3px var(--black-20);
   background: linear-gradient(to bottom, hsl(0, 0%, 93%) 0%, white 100%);
   color: var(--black-30);
+  font-size: x-small;
 }
 
 .black {
-  height: 8rem;
-  width: 2rem;
-  margin: 0 0 0 -1rem;
+  height: 110px;
+  width: 27px;
+  margin: 0 0 0 -11px;
   z-index: 2;
   border: 1px solid black;
   border-radius: 0 0 3px 3px;
@@ -48,14 +53,15 @@
     0 -5px 2px 3px var(--black-60) inset, 0 2px 4px var(--black-50);
   background: linear-gradient(45deg, hsl(0, 0%, 13%) 0%, hsl(0, 0%, 33%) 100%);
   color: var(--white-50);
+  font-size: x-small;
 }
 
 .highlighted {
-  background: hsla(360, 100%, 43%, 0.85);
+  background: #6cd4ff;
 }
 
 .offset {
-  margin: 0 0 0 -1rem;
+  margin: 0 0 0 -16px;
 }
 
 #keyboard li:first-child {
